project almost done.

--- a/index.html
+++ b/index.html
@@ -612,6 +612,8 @@
         </div>
       </nav>
     </footer>
+      <!-- my font awesome icons are not working. i don't understand what happend with my font awesome icons  -->
+      <!-- forgive me for this issues -->
     
 </body>
 </html>
